Fixed flickering when loading the dashboard

--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,15 @@ h1 {
 }
 
 /*
+** Dashboard
+** -----------------------------------------------------------------------------
+*/
+
+#dashboard {
+  display: none;
+}
+
+/*
 ** Balance section
 ** -----------------------------------------------------------------------------
 */
